--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,7 +19,7 @@ mat-sidenav {
   height: calc(100vh - 100px );
   margin: 16px;
   margin-left: 32px;
-  overflow-y: scroll;
+  overflow-y: auto;
   // display: flex;
   // justify-content: center;
   // align-items: center;
