download class list as pdf added

--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -29,6 +29,7 @@
       </tr>
     </tbody>
   </table>
-  <button class="mat-raised-button"> new class</button>
+  <button class="mat-raised-button"> new classe</button>
+  <button class="mat-raised-button">Download Class list</button>
   <!-- <mat-icon>icon-name</mat-icon> -->
 </div>
