--- a/src/app/structures/classes/classes.component.html
+++ b/src/app/structures/classes/classes.component.html
@@ -1,4 +1,7 @@
 <content>
+  <button class="mat-raised-button btn-primary" (click)="openModal()" > new class</button>
+  <button class="mat-raised-button btn-primary" (click)="convert()" > Class List Download</button>
+
 <h1>List of classes</h1>
 
 <div class="header">
@@ -29,7 +32,6 @@
       </tr>
     </tbody>
   </table>
-  <button class="mat-raised-button" (click)="openModal()" > new class</button>
   <!-- <mat-icon>icon-name</mat-icon> -->
 </div>
 
