--- a/src/app/academics/assignation/assignation.component.html
+++ b/src/app/academics/assignation/assignation.component.html
@@ -1,1 +1,10 @@
-<p>assignation works!</p>
+<content>
+    <button class="mat-raised-button btn-primary" (click)="openModal()" > new class</button>
+    <button class="mat-raised-button btn-primary"> Class List Download</button>
+  
+
+  </content>
+
+
+    
+  
