--- a/src/app/modals/classe/add-class/add-class.component.html
+++ b/src/app/modals/classe/add-class/add-class.component.html
@@ -37,7 +37,7 @@
         formControlName= "niveau"
         name="niveau"
       >
-        <option disabled >select a level</option>
+        <!-- <option disabled >select a level</option> -->
         <option >premier cycle</option>
         <option >second cycle</option>
       </select>
