--- a/src/app/persons/students/students.component.html
+++ b/src/app/persons/students/students.component.html
@@ -1,73 +1,42 @@
-<button type="button" class="btn btn-primary me-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  User Login
-</button>
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-  Validation Form
-</button>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
+<content>
+  <h1>List of students</h1>
 
-      <div class="modal-header">
-        <h5 class="modal-title text-danger" id="exampleModalLabel">Login Form</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
+  <div class="header">
+    <table class="class-table table  border-primary">
+      <thead>
+        <tr>
+          <th scope="col">N°</th>
+          <th scope="col">Name</th>
+          <th scope="col">Matricule</th>
 
-      <div class="modal-body">
-        <form>
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-          </div>
+          <th scope="col">Class_id</th>
+          <th scope="col">Pension_id</th>
 
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-          </div>
-          <button type="button" class="btn btn-primary">Login</button>
-        </form>
-      </div>
+          <!-- <th scope="col">exam</th> -->
+          <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="table-active" *ngFor="let elev of eleve; let i = index">
+          <th scope="row">{{i+1}}</th>
+          <th scope="row">{{elev.Nom}}</th>
+          <td>{{elev.Matricule}}</td>
+          <td>{{elev.class_id}}</td>
+          <td>{{elev.id_pension}}</td>
+          <!-- <td>{{clas.examen}}</td> -->
+          <td>
+            <button class="btn btn-primary edit" (click)="edit(elev)">edit</button>
+          </td>
+          <td>
+            <button class="btn btn-danger delete" (click)="delete(elev)" >delete</button>
+          </td>
 
-      <div class="modal-footer">
-        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
-      </div>
-
-    </div>
+        </tr>
+      </tbody>
+    </table>
+    <button class="mat-raised-button" (click)="openModal()" > new student</button>
+    <!-- <mat-icon>icon-name</mat-icon> -->
   </div>
-</div>
-<!-- Modal 2 with validation-->
-<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title text-danger" id="exampleModal2Label">Login Form</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <!-- <div class="modal-body">
-        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }"  id="inputEmail4">
-              <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-              <div *ngIf="f.email.errors.required">Email is required</div>
-              <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-           </div>
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" id="inputPassword4">
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-              <div *ngIf="f.password.errors.required">Password is required</div>
-           </div>
-          </div>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-      </div> -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+
+  </content>
