display ensignant table and setup the README.md file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,10 +25,10 @@
 
 <mat-sidenav-container >
   <mat-sidenav mode="over" #sidenav="matSidenav"  class="mat-elevation-z4" >
-    <img class="avatar mat-elevation-z8" src="../assets/Dorcas.jpeg"   />
+    <img class="avatar mat-elevation-z8" src="../assets/SA_school.jpg"   />
 
-    <h4 class="name">Dorcas Oben</h4>
-    <h6 class="designation">UI / UX Designer</h6>
+    <h4 class="name">Lycée Bilingue de Yaoundé</h4>
+    <h6 class="designation">Yaoundé - Essos</h6>
 
     <mat-divider></mat-divider>
 
