--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -42,10 +42,10 @@
   <div class="absolute-bg"></div>
   <!-- <div class="subcalque"> -->
     <div class="content">
-      <h2 class="text-center">Login</h2>
+      <h2 class="login-title text-center">Login</h2>
       <!-- <div class="row"> -->
         <div class="col-xl-6">
-          <div class="card-body p-md-10">
+          <div class="login-text card-body p-md-10 ">
             <form
               [formGroup]="loginForm"
               (ngSubmit)="onSubmit()"
