--- a/src/app/authentication/signin/signin.component.scss
+++ b/src/app/authentication/signin/signin.component.scss
@@ -10,7 +10,7 @@
   margin-top: -20px;
   margin-right: -20px;
   position: relative;
-  height: 100%;
+  height: 105%;
   background-repeat: inherit;
   // background-size: cover;
   // overflow: hidden;
@@ -25,6 +25,17 @@
 .content {
   position: relative;
   z-index: 2;
+}
+.login-title{
+  color: aliceblue;
+  font-size: 30px;
+  padding-top: 100px;
+}
+
+.login-text{
+  color: aliceblue;
+  font-size: 15px;
+  // padding-top: 100px;
 }
 
 .absolute-bg{
